# UGR-IG

./: README.md
Práctica 1/: Makefile  objetos.cc  objetos.h  practica1.cc
Práctica 2/: CMakeLists.txt
Práctica 2/include/: objetos.h
Práctica 2/src/: objetos.cc  practica2.cc
Práctica 3/: CMakeLists.txt
Práctica 3/include/: objetos.h
Práctica 3/src/: objetos.cc  practica3.cc
Práctica 4/: CMakeLists.txt
Práctica 4/include/: objetos.h
Práctica 4/src/: objetos.cc  practica4.cc
Práctica 5/: Controles.txt  Makefile
Práctica 5/include/: objetos.h
Práctica 5/src/: objetos.cc  practica5.cc
